adwords -> google ads

--- a/application.json
+++ b/application.json
@@ -9,7 +9,7 @@
     "visualization": true
   },
   "home": {
-    "name": "AdWords Overview",
+    "name": "Google Ads Overview",
     "type": "dashboardCollection",
     "permalink": "overview",
     "dashboardCollection": {
@@ -142,9 +142,9 @@
   "name": "Marketing Analytics",
   "sections": [
     {
-      "description": "These reports dive into your AdWords to find ways to increase the ROI of your marketing spend. Use Opportunities to find quick wins, refine your targets using the Performance trend reports, or discover which audiences are falling off your funnel.",
+      "description": "These reports dive into your Google Ads to find ways to increase the ROI of your marketing spend. Use Opportunities to find quick wins, refine your targets using the Performance trend reports, or discover which audiences are falling off your funnel.",
       "icon": "marketing-analytics/search",
-      "name": "AdWords",
+      "name": "Google Ads",
       "enabledByDefault": true,
       "pages": [
         {
