marketing analytics -> digital marketing

--- a/application.json
+++ b/application.json
@@ -139,7 +139,7 @@
       ]
     }
   ],
-  "name": "Marketing Analytics",
+  "name": "Digital Marketing",
   "sections": [
     {
       "description": "These reports dive into your Google Ads to find ways to increase the ROI of your marketing spend. Use Opportunities to find quick wins, refine your targets using the Performance trend reports, or discover which audiences are falling off your funnel.",
