--- a/application.json
+++ b/application.json
@@ -192,6 +192,12 @@
                 "name": "Click Through Rate",
                 "permalink": "click_through_rate",
                 "singleValueReference": "click_through_rate"
+              },
+              {
+                "lookmlID": "marketing_analytics::campaign_metrics_clicks",
+                "name": "Clicks",
+                "permalink": "clicks",
+                "singleValueReference": "clicks"
               }
             ],
             "defaultDashboard": "cost_per_conversion"
@@ -225,6 +231,9 @@
                 },
                 "return_on_ad_spend": {
                   "field": "fact.average_value_per_cost"
+                },
+                "clicks": {
+                  "field": "fact.total_clicks"
                 }
               }
             }
