change name to LinkedIn Ads

--- a/application.json
+++ b/application.json
@@ -1267,7 +1267,7 @@
     {
       "description": "",
       "icon": "marketing-analytics/social",
-      "name": "LinkedIn",
+      "name": "LinkedIn Ads",
       "pages": [
         {
           "name": "Overview",
