--- a/application.json
+++ b/application.json
@@ -180,6 +180,49 @@
           "field": "fact.average_click_rate"
         }
       ]
+    },
+    {
+      "id": "bi_campaign",
+      "name": "Campaigns",
+      "model": "marketing_analytics",
+      "view": "bing_ad_group_date_fact",
+      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "keyColumn": "fact.campaign_name",
+      "columns": [
+        {
+          "name": "Campaign",
+          "field": "fact.campaign_name"
+        },
+        {
+          "name": "Spend",
+          "field": "fact.total_cost"
+        },
+        {
+          "name": "Conv.",
+          "label": "# of Conversions",
+          "field": "fact.total_conversions"
+        },
+        {
+          "name": "CPA",
+          "label": "Cost Per Acquistion (Conversion)",
+          "field": "fact.average_cost_per_conversion"
+        },
+        {
+          "name": "Conv. Rate (CR)",
+          "label": "Conversion Rate",
+          "field": "fact.average_conversion_rate"
+        },
+        {
+          "name": "CPC",
+          "label": "Cost Per Click",
+          "field": "fact.average_cost_per_click"
+        },
+        {
+          "name": "CTR",
+          "label": "Click though Rate",
+          "field": "fact.average_click_rate"
+        }
+      ]
     }
   ],
   "name": "Digital Marketing",
@@ -1445,6 +1488,43 @@
         }
         ],
       "permalink": "linkedin"
+    },
+    {
+      "description": "",
+      "icon": "marketing-analytics/social",
+      "name": "Bing Ads",
+      "pages": [
+        {
+          "name": "Overview",
+          "permalink": "overview",
+          "type": "dashboardCollection",
+          "dashboardCollection": {
+            "dashboards": [
+              {
+                "lookmlID": "marketing_analytics::bing_overview",
+                "name": "Default",
+                "permalink": ""
+              }
+            ]
+          },
+          "filters": [
+            {
+              "defaultValue": "28 day",
+              "field": "fact.period",
+              "name": "Time Frame",
+              "type": "TimeFrame",
+              "dashboardAlias": "Period"
+            },
+            {
+              "field": "fact.campaign_name",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "bi_campaign"
+            }
+          ]
+        }
+        ],
+      "permalink": "bing"
     }
   ]
 }
