--- a/application.json
+++ b/application.json
@@ -223,6 +223,49 @@
           "field": "fact.average_click_rate"
         }
       ]
+    },
+    {
+      "id": "cross_channel_campaign",
+      "name": "Campaigns",
+      "model": "marketing_analytics",
+      "view": "cross_channel_ad_impressions",
+      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "keyColumn": "fact.campaign_name",
+      "columns": [
+        {
+          "name": "Campaign",
+          "field": "fact.campaign_name"
+        },
+        {
+          "name": "Spend",
+          "field": "fact.total_cost"
+        },
+        {
+          "name": "Conv.",
+          "label": "# of Conversions",
+          "field": "fact.total_conversions"
+        },
+        {
+          "name": "CPA",
+          "label": "Cost Per Acquistion (Conversion)",
+          "field": "fact.average_cost_per_conversion"
+        },
+        {
+          "name": "Conv. Rate (CR)",
+          "label": "Conversion Rate",
+          "field": "fact.average_conversion_rate"
+        },
+        {
+          "name": "CPC",
+          "label": "Cost Per Click",
+          "field": "fact.average_cost_per_click"
+        },
+        {
+          "name": "CTR",
+          "label": "Click though Rate",
+          "field": "fact.average_click_rate"
+        }
+      ]
     }
   ],
   "name": "Digital Marketing",
@@ -1377,12 +1420,6 @@
               "dashboardAlias": "Period"
             },
             {
-              "field": "fact.campaign_name",
-              "name": "Campaign",
-              "type": "Table",
-              "tableID": "li_campaign"
-            },
-            {
               "autoSuggest": {
                 "model": "marketing_analytics",
                 "view": "li_period_fact"
@@ -1391,6 +1428,12 @@
               "dashboardAlias": "Account",
               "name": "Account",
               "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "li_campaign"
             }
           ]
         },
@@ -1475,13 +1518,6 @@
               "dashboardAlias": "Period"
             },
             {
-              "field": "fact.campaign_name",
-              "dashboardAlias": "Campaign",
-              "name": "Campaign",
-              "type": "Table",
-              "tableID": "campaign"
-            },
-            {
               "autoSuggest": {
                 "model": "marketing_analytics",
                 "view": "li_period_fact"
@@ -1490,6 +1526,13 @@
               "dashboardAlias": "Account",
               "name": "Account",
               "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "dashboardAlias": "Campaign",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "li_campaign"
             }
           ],
           "name": "Campaigns",
@@ -1528,12 +1571,6 @@
               "dashboardAlias": "Period"
             },
             {
-              "field": "fact.campaign_name",
-              "name": "Campaign",
-              "type": "Table",
-              "tableID": "bi_campaign"
-            },
-            {
               "autoSuggest": {
                 "model": "marketing_analytics",
                 "view": "bing_ad_group_date_fact"
@@ -1542,6 +1579,12 @@
               "dashboardAlias": "Account",
               "name": "Account",
               "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "bi_campaign"
             },
             {
               "autoSuggest": {
@@ -1639,12 +1682,6 @@
               "dashboardAlias": "Period"
             },
             {
-              "field": "fact.campaign_name",
-              "name": "Campaign",
-              "type": "Table",
-              "tableID": "bi_campaign"
-            },
-            {
               "autoSuggest": {
                 "model": "marketing_analytics",
                 "view": "bi_period_fact"
@@ -1653,6 +1690,12 @@
               "dashboardAlias": "Account",
               "name": "Account",
               "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "bi_campaign"
             },
             {
               "autoSuggest": {
@@ -1988,12 +2031,6 @@
               "dashboardAlias": "Period"
             },
             {
-              "field": "fact.campaign_name",
-              "name": "Campaign",
-              "type": "Table",
-              "tableID": "bi_campaign"
-            },
-            {
               "autoSuggest": {
                 "model": "marketing_analytics",
                 "view": "bing_ad_group_date_fact"
@@ -2002,6 +2039,12 @@
               "dashboardAlias": "Account",
               "name": "Account",
               "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "bi_campaign"
             },
             {
               "autoSuggest": {
@@ -2074,6 +2117,149 @@
         }
 
       ]
+    },
+    {
+      "description": "",
+      "icon": "marketing-analytics/search",
+      "name": "All Sources",
+      "pages": [
+        {
+          "dashboardCollection": {
+            "dashboards": [
+              {
+                "lookmlID": "marketing_analytics::cross_channel_spend",
+                "name": "Spend",
+                "permalink": "spend",
+                "singleValueReference": "spend"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_conversions",
+                "name": "Conversions",
+                "permalink": "conversions",
+                "singleValueReference": "conversions"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_cost_per_conversion",
+                "name": "Cost Per Conversion",
+                "permalink": "cost_per_conversion",
+                "singleValueReference": "cost_per_conversion"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_conversion_rate",
+                "name": "Conversion Rate",
+                "permalink": "conversion_rate",
+                "singleValueReference": "conversion_rate"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_cost_per_click",
+                "name": "Cost Per Click",
+                "permalink": "cost_per_click",
+                "singleValueReference": "cost_per_click"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_click_through_rate",
+                "name": "Click Through Rate",
+                "permalink": "click_through_rate",
+                "singleValueReference": "click_through_rate"
+              },
+              {
+                "lookmlID": "marketing_analytics::cross_channel_roas",
+                "name": "Return On Ad Spend",
+                "permalink": "roas",
+                "singleValueReference": "roas",
+                "zeroHide": true
+              }
+            ],
+            "defaultDashboard": "cost_per_conversion"
+          },
+          "singleValuesSources": [
+            {
+              "model": "marketing_analytics",
+              "view": "cross_channel_ad_impressions",
+              "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
+              "fields": {
+                "spend": {
+                  "inverseChange": true,
+                  "field": "fact.total_cost"
+                },
+                "conversions": {
+                  "field": "fact.total_conversions"
+                },
+                "cost_per_conversion": {
+                  "inverseChange": true,
+                  "field": "fact.average_cost_per_conversion"
+                },
+                "conversion_rate": {
+                  "field": "fact.average_conversion_rate"
+                },
+                "cost_per_click": {
+                  "inverseChange": true,
+                  "field": "fact.average_cost_per_click"
+                },
+                "click_through_rate": {
+                  "field": "fact.average_click_rate"
+                },
+                "roas": {
+                  "field": "fact.average_value_per_cost"
+                }
+              }
+            }
+          ],
+          "filters": [
+            {
+              "defaultValue": "28 day",
+              "field": "fact.period",
+              "name": "Time Frame",
+              "type": "TimeFrame",
+              "dashboardAlias": "Period"
+            },
+            {
+              "autoSuggest": {
+                "model": "marketing_analytics",
+                "view": "cross_channel_ad_impressions"
+              },
+              "field": "fact.account_name",
+              "dashboardAlias": "Account",
+              "name": "Account",
+              "type": "Select"
+            },
+            {
+              "autoSuggest": {
+                "model": "marketing_analytics",
+                "view": "cross_channel_ad_impressions"
+              },
+              "field": "fact.channel",
+              "dashboardAlias": "Channel",
+              "name": "Channel",
+              "type": "Select"
+            },
+            {
+              "field": "fact.campaign_name",
+              "dashboardAlias": "Campaign",
+              "name": "Campaign",
+              "type": "Table",
+              "tableID": "cross_channel_campaign"
+            },
+            {
+              "autoSuggest": {
+                "model": "marketing_analytics",
+                "view": "cross_channel_ad_impressions"
+              },
+              "facetedBy": [
+                "fact.campaign_name"
+              ],
+              "field": "fact.ad_group_name",
+              "dashboardAlias": "Ad Group",
+              "name": "Ad Group",
+              "type": "Select"
+            }
+          ],
+          "name": "Campaigns",
+          "permalink": "campaigns",
+          "type": "dashboardCollection"
+        }
+      ],
+      "permalink": "all_sources"
     }
   ]
 }
